# example_pybind11

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  test.py
docs/guides/: anchor-file-pattern.md  from-c-to-python.md
src/: example.c  example.h  example.pyi  example_py_bindings.cpp
tests/: PROJECT_ROOT.md  test_pybind.py  test_pybind_portable.sh
